games and blogs responsive

--- a/pie-web/src/pages/games/absolute-momentum.mdx
+++ b/pie-web/src/pages/games/absolute-momentum.mdx
@@ -26,11 +26,11 @@ features: >-
 
   * Peak Game
 images:
-  - image: pie-web/public/assets/absmom_icon_a_3.png
-  - image: pie-web/public/assets/etoile_portrait_b.png
-  - image: pie-web/public/assets/leilei_portrait_b.png
+  - image: pie-web/public/assets/absmom_banner.jpg
+  - image: pie-web/public/assets/absmom_banner.jpg
+  - image: pie-web/public/assets/absmom_banner.jpg
 imageCarousel:
-  - image: pie-web/public/assets/absmom_icon_a_3.png
-  - image: pie-web/public/assets/etoile_portrait_b.png
-  - image: pie-web/public/assets/leilei_portrait_b.png
+  - image: pie-web/public/assets/absmom_banner.jpg
+  - image: pie-web/public/assets/absmom_banner.jpg
+  - image: pie-web/public/assets/absmom_banner.jpg
 ---
