--- a/src/pages/blogs/title-of-first-blog.mdx
+++ b/src/pages/blogs/title-of-first-blog.mdx
@@ -1,12 +1,12 @@
 ---
 layout: blog
-title: TITLE OF FIRST BLOG
+title: Introducing PIE Dev Studios!
 date: 2025-07-27T20:33:00.000-07:00
 thumbnail: pie-web/public/assets/absmom_icon_a_3.png
 featuredImage: pie-web/public/assets/piedevlogo.png
 ---
 
-## The standard Lorem Ipsum passage
+## testing the web branch if it will update
 
 "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
 
