--- a/src/pages/blogs/title-of-fourth-blog.mdx
+++ b/src/pages/blogs/title-of-fourth-blog.mdx
@@ -1,6 +1,6 @@
 ---
 layout: blog
-title: TITLE OF Fourth BLOG
+title: TITLE OF FOURTH BLOG
 date: 2025-07-27T20:46:00.000-07:00
 thumbnail: pie-web/public/assets/phillipk_nathan_portrait.png
 featuredImage: pie-web/public/assets/test_bg.png
